eks-kubernetes/samples/istio-demo/gateway.yaml
# gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: demo-gateway
  namespace: demo-istio
spec:
  selector:
    istio: ingress
    #istio: ingressgateway  # Matches the ingress gateway pods
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"  # Accept traffic for any hostname
